--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 											<input
 												type="submit"
 												class="btn btn-success d-block m-auto"
-												value="Thêm"
+												value="Xác nhận"
 											/>
 										</form>
 									</div>
