--- a/list_type_tea.html
+++ b/list_type_tea.html
@@ -80,11 +80,76 @@
 						</div>
 					</div>
 				</div>
+
 				<!-- table info section -->
 				<div class="container text-center mt-5">
+					<div class="order-header d-flex justify-content-between">
 					<h3 class="list-tea-header text-left py-2">
 						Danh sách các loại chè có sẵn
 					</h3>
+					<!-- add new tea type -->
+					<!-- add new customer section -->
+					<div class="add-new-customer">
+						<button
+							class="btn btn-primary"
+							data-toggle="modal"
+							data-target="#add-new-tea-type"
+							type="button"
+						>
+							Tạo mới <i class="fas fa-plus"></i>
+						</button>
+						<!-- modal -->
+						<div class="modal fade" id="add-new-tea-type" role="dialog">
+							<div class="modal-dialog">
+								<div class="modal-content">
+									<div class="modal-header">
+										<h4 class="modal-title">Thêm mới loại chè</h4>
+										<button type="button" data-dismiss="modal">&times;</button>
+									</div>
+									<div class="modal-body">
+										<form action="" class="form-group-add-new-tea">
+											<div class="form-group">
+												<input
+													type="text"
+													class="form-control"
+													placeholder="Tên loại chè"
+												/>
+											</div>
+											<div class="form-group">
+												<input
+													type="text"
+													class="form-control"
+													placeholder="Khấu trừ tối đa"
+												/>
+											</div>
+											<div class="form-group">
+												<input
+													type="text"
+													class="form-control"
+													placeholder="Đơn giá"
+												/>
+											</div>
+											<input
+												type="submit"
+												class="btn btn-success d-block m-auto"
+												value="Xác nhận"
+											/>
+										</form>
+									</div>
+									<div class="modal-footer">
+										<button
+											type="button"
+											class="btn btn-secondary"
+											data-dismiss="modal"
+										>
+											Đóng
+										</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					</div>
 					<table class="table">
 						<thead>
 							<tr>
@@ -794,7 +859,7 @@
 											<div class="modal-dialog">
 												<!-- Modal content-->
 												<div class="modal-content">
-													<div class="modal-header text-center">
+													<div class="modal-header  text-center">
 														<h4 class="modal-title">
 															Xóa loại chè này
 														</h4>
