--- a/accountant_home_paid.html
+++ b/accountant_home_paid.html
@@ -19,11 +19,12 @@
 		/>
 		<link rel="stylesheet" href="./css/style.css" />
 		<link rel="stylesheet" href="./css/tablets.css">
+		<link rel="stylesheet" href="">
 		<title>Danh sách đã thanh toán | Kế toán</title>
 	</head>
 	<body>
 		<!-- nav-sidebar -->
-		<section id="loan-control" class="home-page">
+		<section id="list-order-paid" class="home-page">
 			<aside class="left-content">
 				<nav class="navbar bg-navbar">
 					<ul class="navbar-nav">
