--- a/create_order.html
+++ b/create_order.html
@@ -50,8 +50,8 @@
 						<p class="btn btn-danger">
 							Mã đơn số : <span class="order-code">#f847574</span>
 						</p>
-							<div class="form-group">
-							<input type="datetime-local" class="form-control" />
+						<div class="py-2">
+							Ngày : <span>12/2/2020</span>
 						</div>
 						<div class="add-new-tea">
 							<button
