--- a/list_type_tea.html
+++ b/list_type_tea.html
@@ -39,7 +39,7 @@
 								>Kiểm soát công nợ</a
 							>
 							<div class="dropdown-menu bg-navbar">
-								<a class="dropdown-item" href="#">Chưa thanh toán</a>
+								<a class="dropdown-item" href="loan_control_main_ad.html">Chưa thanh toán</a>
 								<a class="dropdown-item" href="#">Đã thanh toán</a>
 							</div>
 						</li>
