--- a/loan_control_main_ad.html
+++ b/loan_control_main_ad.html
@@ -18,7 +18,7 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="./css/style.css" />
-		<title>Kiểm soát công nợ | Kế toán</title>
+		<title>Kiểm soát công nợ | Admin</title>
 	</head>
 	<body>
 		<!-- nav-sidebar -->
@@ -26,18 +26,13 @@
 			<aside class="left-content">
 				<nav class="navbar bg-navbar">
 					<ul class="navbar-nav">
-						<li class="dropdown">
-							<a class="dropdown-toggle text-white" data-toggle="dropdown">
-								Danh sách giao dịch
-							</a>
-							<div class="dropdown-menu bg-navbar">
-								<a class="dropdown-item current" href="accountant_home.html"
-									>Chưa thanh toán</a
-								>
-								<a class="dropdown-item" href="accountant_home_paid.html"
-									>Đã thanh toán</a
-								>
-							</div>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Danh sách khách hàng</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="list_type_tea.html"
+								>Danh sách loại chè</a
+							>
 						</li>
 						<li class="dropdown nav-link">
 							<a
@@ -47,8 +42,8 @@
 								>Kiểm soát công nợ</a
 							>
 							<div class="dropdown-menu bg-navbar">
-								<a class="dropdown-item" href="loan_control_main.html">Chưa thanh toán</a>
-								<a class="dropdown-item" href="loan_order_paid.html">Đã thanh toán</a>
+								<a class="dropdown-item" href="#">Chưa thanh toán</a>
+								<a class="dropdown-item" href="#">Đã thanh toán</a>
 							</div>
 						</li>
 						<li class="dropdown nav-link ">
