--- a/order_paid.html
+++ b/order_paid.html
@@ -164,7 +164,10 @@
 					</div>
 					<!-- order footer -->
 					<!-- payment status -->
-					<div class="d-flex payment-status justify-content-end">
+					<div class="d-flex payment-status justify-content-between">
+						<div class="employee-info">
+							Nhân viên thu mua : <span class="employee-name">Trần Văn Tú</span>
+						</div>
 						<div>
 							<p class="text-medium text-success">
 								Đã thanh toán : <span class="paid-money">20.000.000 đ</span>
