--- a/report_day.html
+++ b/report_day.html
@@ -22,7 +22,7 @@
 	</head>
 	<body>
 		<!-- admin home page -->
-		<section id="home-page-admin" class="home-page">
+		<section id="report-day-admin" class="home-page">
 			<aside class="left-content">
 				<nav class="navbar bg-navbar ">
 					<ul class="navbar-nav">
@@ -90,7 +90,7 @@
 
 				<!-- table info section -->
 				<div class="container mt-5">
-					<div class="list-customer-header mt-4 d-flex">
+					<div class="list-customer-header mt-4 d-flex justify-content-between">
 						<h3>Báo cáo thống kê ngày 12/2/2020</h3>
 						<div class="form-group form-inline">
 							<label for="date" class="mr-2">Ngày số</label>
