--- a/customer_details.html
+++ b/customer_details.html
@@ -128,7 +128,7 @@
 									<td>200<span class="mass-digit">kg</span></td>
 									<td>20.000.000đ</td>
 									<td class="text-danger">10.000.000đ</td>
-									<td><a href="customer_details.html">View</a></td>
+									<td><a href="order_paid.html">View</a></td>
 								</tr>
 								<tr>
 									<td>
@@ -138,7 +138,7 @@
 									<td>200<span class="mass-digit">kg</span></td>
 									<td>20.000.000đ</td>
 									<td class="text-danger">10.000.000đ</td>
-									<td><a href="customer_details.html">View</a></td>
+									<td><a href="order_paid.html">View</a></td>
 								</tr>
 								<tr>
 									<td>
@@ -148,7 +148,7 @@
 									<td>200<span class="mass-digit">kg</span></td>
 									<td>20.000.000đ</td>
 									<td class="text-danger">10.000.000đ</td>
-									<td><a href="customer_details.html">View</a></td>
+									<td><a href="order_paid.html">View</a></td>
 								</tr>
 								<tr>
 									<td>
@@ -158,7 +158,7 @@
 									<td>200<span class="mass-digit">kg</span></td>
 									<td>20.000.000đ</td>
 									<td class="text-danger">10.000.000đ</td>
-									<td><a href="customer_details.html">View</a></td>
+									<td><a href="order_paid.html">View</a></td>
 								</tr>
 								<tr>
 									<td>
@@ -168,7 +168,7 @@
 									<td>200<span class="mass-digit">kg</span></td>
 									<td>20.000.000đ</td>
 									<td class="text-danger">10.000.000đ</td>
-									<td><a href="customer_details.html">View</a></td>
+									<td><a href="order_paid.html">View</a></td>
 								</tr>
 								<tr>
 									<td>
@@ -178,7 +178,7 @@
 									<td>200<span class="mass-digit">kg</span></td>
 									<td>20.000.000đ</td>
 									<td class="text-danger">10.000.000đ</td>
-									<td><a href="customer_details.html">View</a></td>
+									<td><a href="order_paid.html">View</a></td>
 								</tr>
 							</tbody>
 							<tfoot class="tfoot-light">
